chore:phase one of the project documentation